--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body::after {
   filter: blur(3px);
   z-index: -1;
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../images/bgnetflix.jpg");
+    url("./bgnetflix.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   color: var(--color-white);
@@ -192,3 +192,4 @@ figcaption {
 .closeModel {
   cursor: pointer;
 }
+
